202003280
Update LongMynd RX for new QO-100 Beacon

202003141
Correct Lime Transmit Stop from Console Menu

202003140
Added QO-100 Frequencies to Menu
Added keyedtxtouch mode
Adjust C920 Power Line Frequency

202002290
Add IPTS Viewer
Correct format of null packets in limesdr_dvb.cpp
Reduce frame rate for C920

202002142
Correct LimeDVB Output level at 1000 kS

202002141
Rotate 7 inch Screen and other bug fixes

202002140
Based on Buster 2020-02-05
H264 encoding for BATC Streamer corrected
Added C920 as working video source

202001310
Update to LimeSuite 20.01
Initial Buster Release
LimeDVB with some modes released
Repeater TX mode implemented
New Touchscreen Menu for Lime Config
Lime Config Menu added to Console
Calibration switching implemented
Cured retransmit on configuration touch after transmit deselection
Corrected display of DVB-S2 FECs on Info Screen

201912100
Add Autoset of LNB Offset for LongMynd
Grey-out unavailable video source buttons
Cure file handle leak
Prep for Migration to Buster

201910230
Display Additional Receive Parameters
Improve receive display appearance and behaviour

201910100
Allow dist-upgrade and correct auto-start bug
Add button to generate comp video with 7 inch screen
(Add separate attenuator and lime/express level buttons) Non réalisé car bouton UpSample
Set attenuator properly from Console Menu
Allow independent input selection for satellite and terrestrial RX
Error check Sat LNB offset
12-hourly reboot for keyed TX mode

201909210
Initial release of LongMynd Receiver Integration

201907272
Audio out enabled on LimeNET Micro
Allow 33KS TX selection
Handle DVB-S2 FECs better
Allow 16:9 Comp Vid H264 with C920 connected
Don't call dist-upgrade in install and update (to avoid 3.5 touchscreen issue)

201907070
Basic support for LimeNET-Micro
Preparation for receive using MiniTiouner and LongMynd code
Fix for Waveshare Touchscreen problem

201906060
Overide RPi GPIOs when Express GPIOs 16-31 selected