@@ -2,16 +2,27 @@
 
 # Udpate limesdr_toolbox
 cd /home/pi/rpidatv/src/limesdr_toolbox
-cmake .
 make
 if [ $? != "0" ]; then
   echo
-  echo "failed install"
+  echo "Failed basic LimeSDR Toolbox install"
   cd /home/pi
   exit
 fi
 
-cp limesdr_dump  ../../bin/
-cp limesdr_send ../../bin/
-cp limesdr_stopchannel ../../bin/
-cp limesdr_forward ../../bin/
+cp limesdr_send /home/pi/rpidatv/bin/
+cp limesdr_dump /home/pi/rpidatv/bin/
+cp limesdr_stopchannel /home/pi/rpidatv/bin/
+cp limesdr_forward /home/pi/rpidatv/bin/
+
+make dvb
+if [ $? != "0" ]; then
+  echo
+  echo "Failed LimeSDR DVB install"
+  cd /home/pi
+  exit
+fi
+
+cp limesdr_dvb /home/pi/rpidatv/bin/
+cd /home/pi
+exit
