@@ -1,3 +1,9 @@
+202003301
+Reduce delay for DVB-S in LimeDVB mode
+
+202003300
+Add support for LimeSDR USB
+
 202003280
 Update LongMynd RX for new QO-100 Beacon
 
